--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tailvite",
   "version": "0.0.1",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -9,19 +10,20 @@
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.2",
-    "@tailwindcss/forms": "^0.4.0-alpha.1",
-    "@tailwindcss/typography": "^0.5.0-alpha.1",
-    "autoprefixer": "^10.3.7",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.12",
+    "autoprefixer": "^10.4.19",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.3.11",
     "prettier": "^2.4.1",
-    "tailwindcss": "^3.0.0-alpha.1",
-    "vite": "^2.6.0"
+    "sass": "^1.74.1",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.2.8",
+    "vite-plugin-live-reload": "^3.0.3",
+    "vite-plugin-mkcert": "^1.17.5"
   },
   "dependencies": {
-    "alpinejs": "^3.5.1",
-    "sass": "^1.42.1",
-    "vite-plugin-live-reload": "^2.1.0"
+    "alpinejs": "^3.13.8"
   }
 }
