--- a/tailvite.libraries.yml
+++ b/tailvite.libraries.yml
@@ -2,17 +2,7 @@
 # Paths will be altered for local or prod with hook_library_info_alter().
 global:
   js:
-    src/main.js: { attributes: { type: 'module'}}
+    resources/main.js: { attributes: { type: 'module' } }
   dependencies:
     - core/jquery
     - core/drupalSettings
-
-hot-module-replacement:
-  header: true
-  js:
-    http://localhost:12321/@vite/client: {type: external, attributes: { type: 'module'}}
-
-fontinter:
-  css:
-    theme:
-      '//rsms.me/inter/inter.css': { type: external, minified: false }
